corrected alignment!

--- a/foundations/05-descendant-combinator/style.css
+++ b/foundations/05-descendant-combinator/style.css
@@ -2,5 +2,6 @@
     color: red;
     background-color: yellow;
     font-size: 20px;
-
+    text-align: center;
+    
 }
